// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integrations runs categories.lua 1`] = `
{
  "categories": [
    {
      "channels": [
        {
          "comment": "a-channel",
          "id": "1094801227080015882",
          "options": {
            "nsfw": false,
            "slowmode": 0,
            "topic": undefined,
          },
          "overrides": [],
          "parentId": "1094801227080015882",
          "predicate": [Function],
          "type": "text",
        },
        {
          "comment": "a-voice-channel",
          "id": "1094801227080015882",
          "options": {
            "bitrate": undefined,
            "nsfw": false,
            "userLimit": undefined,
          },
          "overrides": [],
          "parentId": "1094801227080015882",
          "predicate": [Function],
          "type": "voice",
        },
      ],
      "comment": "a-category",
      "id": "1094801227080015882",
      "overrides": [],
      "predicate": [Function],
    },
    {
      "channels": [
        {
          "comment": "an-nsfw-channel",
          "id": "1094801227080015882",
          "options": {
            "nsfw": true,
            "slowmode": 0,
            "topic": undefined,
          },
          "overrides": [],
          "parentId": "1094801227080015882",
          "predicate": [Function],
          "type": "text",
        },
        {
          "comment": "a-voice-channel",
          "id": "1094801227080015882",
          "options": {
            "bitrate": undefined,
            "nsfw": false,
            "userLimit": undefined,
          },
          "overrides": [],
          "parentId": "1094801227080015882",
          "predicate": [Function],
          "type": "voice",
        },
      ],
      "comment": "another-category",
      "id": "1094801227080015882",
      "overrides": [],
      "predicate": [Function],
    },
  ],
  "globalChannels": [],
  "globalRoles": [
    {
      "comment": "@everyone",
      "id": "172018499005317120",
      "options": {
        "colour": 0,
        "hoisted": false,
        "mentionableByEveryone": false,
      },
      "permissions": {
        "add_reactions": false,
        "administrator": false,
        "attach_files": false,
        "ban_members": false,
        "change_nickname": false,
        "connect": false,
        "create_instant_invite": false,
        "create_private_threads": false,
        "create_public_threads": false,
        "deafen_members": false,
        "embed_links": false,
        "kick_members": false,
        "manage_channels": false,
        "manage_events": false,
        "manage_guild": false,
        "manage_guild_expressions": false,
        "manage_messages": false,
        "manage_nicknames": false,
        "manage_roles": false,
        "manage_threads": false,
        "manage_webhooks": false,
        "mention_everyone": false,
        "moderate_members": false,
        "move_members": false,
        "mute_members": false,
        "priority_speaker": false,
        "read_message_history": false,
        "request_to_speak": false,
        "send_messages": false,
        "send_messages_in_threads": false,
        "send_tts_messages": false,
        "speak": false,
        "stream": false,
        "use_application_commands": false,
        "use_embedded_activities": false,
        "use_external_emojis": false,
        "use_external_stickers": false,
        "use_soundboard": false,
        "use_vad": false,
        "view_audit_log": false,
        "view_channel": false,
        "view_creator_monetization_analytics": false,
        "view_guild_insights": false,
      },
    },
  ],
  "guildId": "1094801227080015882",
}
`;

exports[`Integrations runs channels.lua 1`] = `
{
  "categories": [],
  "globalChannels": [
    {
      "comment": "test-channel",
      "id": "1094801227080015882",
      "options": {
        "nsfw": false,
        "slowmode": 0,
        "topic": "a topic",
      },
      "overrides": [],
      "parentId": undefined,
      "predicate": [Function],
      "type": "text",
    },
    {
      "comment": "test-channel-2",
      "id": "1094801227080015882",
      "options": {
        "bitrate": undefined,
        "nsfw": true,
        "userLimit": undefined,
      },
      "overrides": [],
      "parentId": undefined,
      "predicate": [Function],
      "type": "voice",
    },
    {
      "comment": "test-channel-2",
      "id": "1094801227080015882",
      "options": {
        "nsfw": true,
        "slowmode": 25,
        "topic": undefined,
      },
      "overrides": [],
      "parentId": undefined,
      "predicate": [Function],
      "type": "text",
    },
    {
      "comment": "test-channel-3",
      "id": "1094801227080015882",
      "options": {
        "nsfw": false,
        "slowmode": 25,
        "topic": undefined,
      },
      "overrides": [],
      "parentId": undefined,
      "predicate": [Function],
      "type": "text",
    },
  ],
  "globalRoles": [
    {
      "comment": "@everyone",
      "id": "172018499005317120",
      "options": {
        "colour": 0,
        "hoisted": false,
        "mentionableByEveryone": false,
      },
      "permissions": {
        "add_reactions": false,
        "administrator": false,
        "attach_files": false,
        "ban_members": false,
        "change_nickname": false,
        "connect": false,
        "create_instant_invite": false,
        "create_private_threads": false,
        "create_public_threads": false,
        "deafen_members": false,
        "embed_links": false,
        "kick_members": false,
        "manage_channels": false,
        "manage_events": false,
        "manage_guild": false,
        "manage_guild_expressions": false,
        "manage_messages": false,
        "manage_nicknames": false,
        "manage_roles": false,
        "manage_threads": false,
        "manage_webhooks": false,
        "mention_everyone": false,
        "moderate_members": false,
        "move_members": false,
        "mute_members": false,
        "priority_speaker": false,
        "read_message_history": false,
        "request_to_speak": false,
        "send_messages": false,
        "send_messages_in_threads": false,
        "send_tts_messages": false,
        "speak": false,
        "stream": false,
        "use_application_commands": false,
        "use_embedded_activities": false,
        "use_external_emojis": false,
        "use_external_stickers": false,
        "use_soundboard": false,
        "use_vad": false,
        "view_audit_log": false,
        "view_channel": false,
        "view_creator_monetization_analytics": false,
        "view_guild_insights": false,
      },
    },
  ],
  "guildId": "1094801227080015882",
}
`;

exports[`Integrations runs channels-with-overrides.lua 1`] = `
{
  "categories": [],
  "globalChannels": [
    {
      "comment": "test-channel",
      "id": "1094801227080015882",
      "options": {
        "nsfw": false,
        "slowmode": 0,
        "topic": "a topic",
      },
      "overrides": [
        {
          "comment": "mods",
          "id": "1094801227080015882",
          "permissions": {
            "add_reactions": undefined,
            "administrator": undefined,
            "attach_files": undefined,
            "ban_members": undefined,
            "change_nickname": undefined,
            "connect": undefined,
            "create_instant_invite": undefined,
            "create_private_threads": undefined,
            "create_public_threads": undefined,
            "deafen_members": undefined,
            "embed_links": undefined,
            "kick_members": undefined,
            "manage_channels": undefined,
            "manage_events": undefined,
            "manage_guild": undefined,
            "manage_guild_expressions": undefined,
            "manage_messages": undefined,
            "manage_nicknames": undefined,
            "manage_roles": undefined,
            "manage_threads": undefined,
            "manage_webhooks": undefined,
            "mention_everyone": undefined,
            "moderate_members": undefined,
            "move_members": undefined,
            "mute_members": undefined,
            "priority_speaker": undefined,
            "read_message_history": undefined,
            "request_to_speak": undefined,
            "send_messages": undefined,
            "send_messages_in_threads": undefined,
            "send_tts_messages": undefined,
            "speak": undefined,
            "stream": undefined,
            "use_application_commands": undefined,
            "use_embedded_activities": undefined,
            "use_external_emojis": undefined,
            "use_external_stickers": undefined,
            "use_soundboard": undefined,
            "use_vad": true,
            "view_audit_log": undefined,
            "view_channel": undefined,
            "view_creator_monetization_analytics": undefined,
            "view_guild_insights": undefined,
          },
          "type": "role",
        },
        {
          "comment": "mods-2",
          "id": "1094801227080015882",
          "permissions": {
            "add_reactions": undefined,
            "administrator": undefined,
            "attach_files": undefined,
            "ban_members": undefined,
            "change_nickname": undefined,
            "connect": undefined,
            "create_instant_invite": undefined,
            "create_private_threads": undefined,
            "create_public_threads": undefined,
            "deafen_members": undefined,
            "embed_links": undefined,
            "kick_members": undefined,
            "manage_channels": undefined,
            "manage_events": undefined,
            "manage_guild": undefined,
            "manage_guild_expressions": undefined,
            "manage_messages": undefined,
            "manage_nicknames": undefined,
            "manage_roles": undefined,
            "manage_threads": undefined,
            "manage_webhooks": undefined,
            "mention_everyone": undefined,
            "moderate_members": undefined,
            "move_members": undefined,
            "mute_members": undefined,
            "priority_speaker": undefined,
            "read_message_history": undefined,
            "request_to_speak": undefined,
            "send_messages": true,
            "send_messages_in_threads": undefined,
            "send_tts_messages": undefined,
            "speak": undefined,
            "stream": undefined,
            "use_application_commands": undefined,
            "use_embedded_activities": undefined,
            "use_external_emojis": undefined,
            "use_external_stickers": undefined,
            "use_soundboard": undefined,
            "use_vad": undefined,
            "view_audit_log": undefined,
            "view_channel": undefined,
            "view_creator_monetization_analytics": undefined,
            "view_guild_insights": undefined,
          },
          "type": "role",
        },
      ],
      "parentId": undefined,
      "predicate": [Function],
      "type": "text",
    },
    {
      "comment": "test-channel-2",
      "id": "1094801227080015882",
      "options": {
        "bitrate": undefined,
        "nsfw": true,
        "userLimit": undefined,
      },
      "overrides": [
        {
          "comment": "mods",
          "id": "1094801227080015882",
          "permissions": {
            "add_reactions": undefined,
            "administrator": undefined,
            "attach_files": undefined,
            "ban_members": undefined,
            "change_nickname": undefined,
            "connect": undefined,
            "create_instant_invite": undefined,
            "create_private_threads": undefined,
            "create_public_threads": undefined,
            "deafen_members": undefined,
            "embed_links": undefined,
            "kick_members": undefined,
            "manage_channels": undefined,
            "manage_events": undefined,
            "manage_guild": undefined,
            "manage_guild_expressions": undefined,
            "manage_messages": undefined,
            "manage_nicknames": undefined,
            "manage_roles": undefined,
            "manage_threads": undefined,
            "manage_webhooks": undefined,
            "mention_everyone": undefined,
            "moderate_members": undefined,
            "move_members": undefined,
            "mute_members": undefined,
            "priority_speaker": undefined,
            "read_message_history": undefined,
            "request_to_speak": undefined,
            "send_messages": undefined,
            "send_messages_in_threads": undefined,
            "send_tts_messages": undefined,
            "speak": false,
            "stream": undefined,
            "use_application_commands": undefined,
            "use_embedded_activities": undefined,
            "use_external_emojis": undefined,
            "use_external_stickers": undefined,
            "use_soundboard": undefined,
            "use_vad": undefined,
            "view_audit_log": undefined,
            "view_channel": undefined,
            "view_creator_monetization_analytics": undefined,
            "view_guild_insights": undefined,
          },
          "type": "role",
        },
        {
          "comment": "mods-2",
          "id": "1094801227080015882",
          "permissions": {
            "add_reactions": undefined,
            "administrator": undefined,
            "attach_files": undefined,
            "ban_members": undefined,
            "change_nickname": undefined,
            "connect": undefined,
            "create_instant_invite": undefined,
            "create_private_threads": undefined,
            "create_public_threads": undefined,
            "deafen_members": undefined,
            "embed_links": undefined,
            "kick_members": undefined,
            "manage_channels": undefined,
            "manage_events": undefined,
            "manage_guild": undefined,
            "manage_guild_expressions": undefined,
            "manage_messages": undefined,
            "manage_nicknames": undefined,
            "manage_roles": undefined,
            "manage_threads": undefined,
            "manage_webhooks": undefined,
            "mention_everyone": undefined,
            "moderate_members": undefined,
            "move_members": undefined,
            "mute_members": undefined,
            "priority_speaker": true,
            "read_message_history": undefined,
            "request_to_speak": undefined,
            "send_messages": undefined,
            "send_messages_in_threads": undefined,
            "send_tts_messages": undefined,
            "speak": undefined,
            "stream": undefined,
            "use_application_commands": undefined,
            "use_embedded_activities": undefined,
            "use_external_emojis": undefined,
            "use_external_stickers": undefined,
            "use_soundboard": undefined,
            "use_vad": undefined,
            "view_audit_log": undefined,
            "view_channel": undefined,
            "view_creator_monetization_analytics": undefined,
            "view_guild_insights": undefined,
          },
          "type": "role",
        },
      ],
      "parentId": undefined,
      "predicate": [Function],
      "type": "voice",
    },
    {
      "comment": "test-channel-2",
      "id": "1094801227080015882",
      "options": {
        "nsfw": true,
        "slowmode": 25,
        "topic": undefined,
      },
      "overrides": [
        {
          "comment": "mods",
          "id": "1094801227080015882",
          "permissions": {
            "add_reactions": undefined,
            "administrator": undefined,
            "attach_files": undefined,
            "ban_members": undefined,
            "change_nickname": undefined,
            "connect": undefined,
            "create_instant_invite": undefined,
            "create_private_threads": undefined,
            "create_public_threads": undefined,
            "deafen_members": undefined,
            "embed_links": undefined,
            "kick_members": undefined,
            "manage_channels": undefined,
            "manage_events": undefined,
            "manage_guild": undefined,
            "manage_guild_expressions": undefined,
            "manage_messages": true,
            "manage_nicknames": undefined,
            "manage_roles": undefined,
            "manage_threads": undefined,
            "manage_webhooks": undefined,
            "mention_everyone": undefined,
            "moderate_members": undefined,
            "move_members": undefined,
            "mute_members": undefined,
            "priority_speaker": undefined,
            "read_message_history": undefined,
            "request_to_speak": undefined,
            "send_messages": undefined,
            "send_messages_in_threads": undefined,
            "send_tts_messages": undefined,
            "speak": undefined,
            "stream": undefined,
            "use_application_commands": undefined,
            "use_embedded_activities": undefined,
            "use_external_emojis": undefined,
            "use_external_stickers": undefined,
            "use_soundboard": undefined,
            "use_vad": undefined,
            "view_audit_log": undefined,
            "view_channel": undefined,
            "view_creator_monetization_analytics": undefined,
            "view_guild_insights": undefined,
          },
          "type": "role",
        },
        {
          "comment": "mods-2",
          "id": "1094801227080015882",
          "permissions": {
            "add_reactions": undefined,
            "administrator": undefined,
            "attach_files": false,
            "ban_members": undefined,
            "change_nickname": undefined,
            "connect": undefined,
            "create_instant_invite": undefined,
            "create_private_threads": undefined,
            "create_public_threads": undefined,
            "deafen_members": undefined,
            "embed_links": undefined,
            "kick_members": undefined,
            "manage_channels": undefined,
            "manage_events": undefined,
            "manage_guild": undefined,
            "manage_guild_expressions": undefined,
            "manage_messages": undefined,
            "manage_nicknames": undefined,
            "manage_roles": undefined,
            "manage_threads": undefined,
            "manage_webhooks": undefined,
            "mention_everyone": undefined,
            "moderate_members": undefined,
            "move_members": undefined,
            "mute_members": undefined,
            "priority_speaker": undefined,
            "read_message_history": undefined,
            "request_to_speak": undefined,
            "send_messages": undefined,
            "send_messages_in_threads": undefined,
            "send_tts_messages": undefined,
            "speak": undefined,
            "stream": undefined,
            "use_application_commands": undefined,
            "use_embedded_activities": undefined,
            "use_external_emojis": undefined,
            "use_external_stickers": undefined,
            "use_soundboard": undefined,
            "use_vad": undefined,
            "view_audit_log": undefined,
            "view_channel": undefined,
            "view_creator_monetization_analytics": undefined,
            "view_guild_insights": undefined,
          },
          "type": "user",
        },
      ],
      "parentId": undefined,
      "predicate": [Function],
      "type": "text",
    },
    {
      "comment": "test-channel-3",
      "id": "1094801227080015882",
      "options": {
        "nsfw": false,
        "slowmode": 25,
        "topic": undefined,
      },
      "overrides": [
        {
          "comment": "mods",
          "id": "1094801227080015882",
          "permissions": {
            "add_reactions": undefined,
            "administrator": undefined,
            "attach_files": undefined,
            "ban_members": undefined,
            "change_nickname": undefined,
            "connect": undefined,
            "create_instant_invite": undefined,
            "create_private_threads": undefined,
            "create_public_threads": undefined,
            "deafen_members": undefined,
            "embed_links": undefined,
            "kick_members": undefined,
            "manage_channels": undefined,
            "manage_events": undefined,
            "manage_guild": undefined,
            "manage_guild_expressions": undefined,
            "manage_messages": undefined,
            "manage_nicknames": undefined,
            "manage_roles": true,
            "manage_threads": undefined,
            "manage_webhooks": undefined,
            "mention_everyone": undefined,
            "moderate_members": undefined,
            "move_members": undefined,
            "mute_members": undefined,
            "priority_speaker": undefined,
            "read_message_history": undefined,
            "request_to_speak": undefined,
            "send_messages": undefined,
            "send_messages_in_threads": undefined,
            "send_tts_messages": undefined,
            "speak": undefined,
            "stream": undefined,
            "use_application_commands": undefined,
            "use_embedded_activities": undefined,
            "use_external_emojis": undefined,
            "use_external_stickers": undefined,
            "use_soundboard": undefined,
            "use_vad": undefined,
            "view_audit_log": undefined,
            "view_channel": undefined,
            "view_creator_monetization_analytics": undefined,
            "view_guild_insights": undefined,
          },
          "type": "role",
        },
        {
          "comment": "mods-2",
          "id": "1094801227080015882",
          "permissions": {
            "add_reactions": undefined,
            "administrator": undefined,
            "attach_files": undefined,
            "ban_members": undefined,
            "change_nickname": undefined,
            "connect": undefined,
            "create_instant_invite": undefined,
            "create_private_threads": undefined,
            "create_public_threads": undefined,
            "deafen_members": undefined,
            "embed_links": undefined,
            "kick_members": undefined,
            "manage_channels": undefined,
            "manage_events": undefined,
            "manage_guild": undefined,
            "manage_guild_expressions": undefined,
            "manage_messages": undefined,
            "manage_nicknames": undefined,
            "manage_roles": undefined,
            "manage_threads": undefined,
            "manage_webhooks": undefined,
            "mention_everyone": undefined,
            "moderate_members": undefined,
            "move_members": true,
            "mute_members": undefined,
            "priority_speaker": undefined,
            "read_message_history": undefined,
            "request_to_speak": undefined,
            "send_messages": undefined,
            "send_messages_in_threads": undefined,
            "send_tts_messages": undefined,
            "speak": undefined,
            "stream": undefined,
            "use_application_commands": undefined,
            "use_embedded_activities": undefined,
            "use_external_emojis": undefined,
            "use_external_stickers": undefined,
            "use_soundboard": undefined,
            "use_vad": undefined,
            "view_audit_log": undefined,
            "view_channel": undefined,
            "view_creator_monetization_analytics": undefined,
            "view_guild_insights": undefined,
          },
          "type": "role",
        },
      ],
      "parentId": undefined,
      "predicate": [Function],
      "type": "text",
    },
  ],
  "globalRoles": [
    {
      "comment": "@everyone",
      "id": "172018499005317120",
      "options": {
        "colour": 0,
        "hoisted": false,
        "mentionableByEveryone": false,
      },
      "permissions": {
        "add_reactions": false,
        "administrator": false,
        "attach_files": false,
        "ban_members": false,
        "change_nickname": false,
        "connect": false,
        "create_instant_invite": false,
        "create_private_threads": false,
        "create_public_threads": false,
        "deafen_members": false,
        "embed_links": false,
        "kick_members": false,
        "manage_channels": false,
        "manage_events": false,
        "manage_guild": false,
        "manage_guild_expressions": false,
        "manage_messages": false,
        "manage_nicknames": false,
        "manage_roles": false,
        "manage_threads": false,
        "manage_webhooks": false,
        "mention_everyone": false,
        "moderate_members": false,
        "move_members": false,
        "mute_members": false,
        "priority_speaker": false,
        "read_message_history": false,
        "request_to_speak": false,
        "send_messages": false,
        "send_messages_in_threads": false,
        "send_tts_messages": false,
        "speak": false,
        "stream": false,
        "use_application_commands": false,
        "use_embedded_activities": false,
        "use_external_emojis": false,
        "use_external_stickers": false,
        "use_soundboard": false,
        "use_vad": false,
        "view_audit_log": false,
        "view_channel": false,
        "view_creator_monetization_analytics": false,
        "view_guild_insights": false,
      },
    },
  ],
  "guildId": "1094801227080015882",
}
`;

exports[`Integrations runs inheritance-category.lua 1`] = `
{
  "categories": [
    {
      "channels": [
        {
          "comment": "General",
          "id": "1008440520672038996",
          "options": {
            "nsfw": false,
            "slowmode": 0,
            "topic": undefined,
          },
          "overrides": [
            {
              "comment": "@everyone",
              "id": "172018499005317120",
              "permissions": {
                "add_reactions": undefined,
                "administrator": undefined,
                "attach_files": undefined,
                "ban_members": undefined,
                "change_nickname": undefined,
                "connect": undefined,
                "create_instant_invite": undefined,
                "create_private_threads": undefined,
                "create_public_threads": undefined,
                "deafen_members": undefined,
                "embed_links": undefined,
                "kick_members": undefined,
                "manage_channels": true,
                "manage_events": undefined,
                "manage_guild": false,
                "manage_guild_expressions": undefined,
                "manage_messages": undefined,
                "manage_nicknames": undefined,
                "manage_roles": undefined,
                "manage_threads": undefined,
                "manage_webhooks": undefined,
                "mention_everyone": undefined,
                "moderate_members": undefined,
                "move_members": undefined,
                "mute_members": undefined,
                "priority_speaker": undefined,
                "read_message_history": undefined,
                "request_to_speak": undefined,
                "send_messages": undefined,
                "send_messages_in_threads": undefined,
                "send_tts_messages": undefined,
                "speak": undefined,
                "stream": undefined,
                "use_application_commands": undefined,
                "use_embedded_activities": undefined,
                "use_external_emojis": undefined,
                "use_external_stickers": undefined,
                "use_soundboard": undefined,
                "use_vad": undefined,
                "view_audit_log": undefined,
                "view_channel": undefined,
                "view_creator_monetization_analytics": undefined,
                "view_guild_insights": undefined,
              },
              "type": "role",
            },
          ],
          "parentId": "1008440520672038994",
          "predicate": [Function],
          "type": "text",
        },
        {
          "comment": "no-manage",
          "id": "1008940520672038996",
          "options": {
            "nsfw": false,
            "slowmode": 0,
            "topic": undefined,
          },
          "overrides": [
            {
              "comment": "@everyone",
              "id": "172018499005317120",
              "permissions": {
                "add_reactions": undefined,
                "administrator": undefined,
                "attach_files": undefined,
                "ban_members": undefined,
                "change_nickname": undefined,
                "connect": undefined,
                "create_instant_invite": undefined,
                "create_private_threads": undefined,
                "create_public_threads": undefined,
                "deafen_members": undefined,
                "embed_links": undefined,
                "kick_members": undefined,
                "manage_channels": false,
                "manage_events": undefined,
                "manage_guild": true,
                "manage_guild_expressions": undefined,
                "manage_messages": undefined,
                "manage_nicknames": undefined,
                "manage_roles": undefined,
                "manage_threads": undefined,
                "manage_webhooks": undefined,
                "mention_everyone": undefined,
                "moderate_members": undefined,
                "move_members": undefined,
                "mute_members": undefined,
                "priority_speaker": undefined,
                "read_message_history": undefined,
                "request_to_speak": undefined,
                "send_messages": undefined,
                "send_messages_in_threads": undefined,
                "send_tts_messages": undefined,
                "speak": undefined,
                "stream": undefined,
                "use_application_commands": undefined,
                "use_embedded_activities": undefined,
                "use_external_emojis": undefined,
                "use_external_stickers": undefined,
                "use_soundboard": undefined,
                "use_vad": undefined,
                "view_audit_log": undefined,
                "view_channel": undefined,
                "view_creator_monetization_analytics": undefined,
                "view_guild_insights": undefined,
              },
              "type": "role",
            },
          ],
          "parentId": "1008440520672038994",
          "predicate": [Function],
          "type": "text",
        },
        {
          "comment": "inherit-manage",
          "id": "1008940520672038986",
          "options": {
            "nsfw": false,
            "slowmode": 0,
            "topic": undefined,
          },
          "overrides": [
            {
              "comment": "@everyone",
              "id": "172018499005317120",
              "permissions": {
                "add_reactions": undefined,
                "administrator": undefined,
                "attach_files": undefined,
                "ban_members": undefined,
                "change_nickname": undefined,
                "connect": undefined,
                "create_instant_invite": undefined,
                "create_private_threads": undefined,
                "create_public_threads": undefined,
                "deafen_members": undefined,
                "embed_links": undefined,
                "kick_members": undefined,
                "manage_channels": true,
                "manage_events": undefined,
                "manage_guild": false,
                "manage_guild_expressions": undefined,
                "manage_messages": undefined,
                "manage_nicknames": undefined,
                "manage_roles": undefined,
                "manage_threads": undefined,
                "manage_webhooks": undefined,
                "mention_everyone": undefined,
                "moderate_members": undefined,
                "move_members": undefined,
                "mute_members": undefined,
                "priority_speaker": undefined,
                "read_message_history": undefined,
                "request_to_speak": undefined,
                "send_messages": undefined,
                "send_messages_in_threads": undefined,
                "send_tts_messages": undefined,
                "speak": true,
                "stream": undefined,
                "use_application_commands": undefined,
                "use_embedded_activities": undefined,
                "use_external_emojis": undefined,
                "use_external_stickers": undefined,
                "use_soundboard": undefined,
                "use_vad": undefined,
                "view_audit_log": undefined,
                "view_channel": undefined,
                "view_creator_monetization_analytics": undefined,
                "view_guild_insights": undefined,
              },
              "type": "role",
            },
          ],
          "parentId": "1008440520672038994",
          "predicate": [Function],
          "type": "text",
        },
      ],
      "comment": "Text channels",
      "id": "1008440520672038994",
      "overrides": [
        {
          "comment": "@everyone",
          "id": "172018499005317120",
          "permissions": {
            "add_reactions": undefined,
            "administrator": undefined,
            "attach_files": undefined,
            "ban_members": undefined,
            "change_nickname": undefined,
            "connect": undefined,
            "create_instant_invite": undefined,
            "create_private_threads": undefined,
            "create_public_threads": undefined,
            "deafen_members": undefined,
            "embed_links": undefined,
            "kick_members": undefined,
            "manage_channels": true,
            "manage_events": undefined,
            "manage_guild": false,
            "manage_guild_expressions": undefined,
            "manage_messages": undefined,
            "manage_nicknames": undefined,
            "manage_roles": undefined,
            "manage_threads": undefined,
            "manage_webhooks": undefined,
            "mention_everyone": undefined,
            "moderate_members": undefined,
            "move_members": undefined,
            "mute_members": undefined,
            "priority_speaker": undefined,
            "read_message_history": undefined,
            "request_to_speak": undefined,
            "send_messages": undefined,
            "send_messages_in_threads": undefined,
            "send_tts_messages": undefined,
            "speak": undefined,
            "stream": undefined,
            "use_application_commands": undefined,
            "use_embedded_activities": undefined,
            "use_external_emojis": undefined,
            "use_external_stickers": undefined,
            "use_soundboard": undefined,
            "use_vad": undefined,
            "view_audit_log": undefined,
            "view_channel": undefined,
            "view_creator_monetization_analytics": undefined,
            "view_guild_insights": undefined,
          },
          "type": "role",
        },
      ],
      "predicate": [Function],
    },
  ],
  "globalChannels": [],
  "globalRoles": [
    {
      "comment": "@everyone",
      "id": "172018499005317120",
      "options": {
        "colour": 0,
        "hoisted": false,
        "mentionableByEveryone": false,
      },
      "permissions": {
        "add_reactions": false,
        "administrator": false,
        "attach_files": false,
        "ban_members": false,
        "change_nickname": false,
        "connect": false,
        "create_instant_invite": false,
        "create_private_threads": false,
        "create_public_threads": false,
        "deafen_members": false,
        "embed_links": false,
        "kick_members": false,
        "manage_channels": true,
        "manage_events": false,
        "manage_guild": false,
        "manage_guild_expressions": false,
        "manage_messages": false,
        "manage_nicknames": false,
        "manage_roles": false,
        "manage_threads": false,
        "manage_webhooks": false,
        "mention_everyone": false,
        "moderate_members": false,
        "move_members": false,
        "mute_members": false,
        "priority_speaker": false,
        "read_message_history": false,
        "request_to_speak": false,
        "send_messages": false,
        "send_messages_in_threads": false,
        "send_tts_messages": false,
        "speak": false,
        "stream": false,
        "use_application_commands": false,
        "use_embedded_activities": false,
        "use_external_emojis": false,
        "use_external_stickers": false,
        "use_soundboard": false,
        "use_vad": false,
        "view_audit_log": false,
        "view_channel": false,
        "view_creator_monetization_analytics": false,
        "view_guild_insights": false,
      },
    },
  ],
  "guildId": "172018499005317120",
}
`;

exports[`Integrations runs inheritance-role.lua 1`] = `
{
  "categories": [],
  "globalChannels": [],
  "globalRoles": [
    {
      "comment": "@everyone",
      "id": "172018499005317120",
      "options": {
        "colour": 0,
        "hoisted": false,
        "mentionableByEveryone": false,
      },
      "permissions": {
        "add_reactions": false,
        "administrator": false,
        "attach_files": false,
        "ban_members": false,
        "change_nickname": false,
        "connect": false,
        "create_instant_invite": false,
        "create_private_threads": false,
        "create_public_threads": false,
        "deafen_members": false,
        "embed_links": false,
        "kick_members": false,
        "manage_channels": true,
        "manage_events": false,
        "manage_guild": false,
        "manage_guild_expressions": false,
        "manage_messages": false,
        "manage_nicknames": false,
        "manage_roles": false,
        "manage_threads": false,
        "manage_webhooks": false,
        "mention_everyone": false,
        "moderate_members": false,
        "move_members": false,
        "mute_members": false,
        "priority_speaker": false,
        "read_message_history": false,
        "request_to_speak": false,
        "send_messages": false,
        "send_messages_in_threads": false,
        "send_tts_messages": false,
        "speak": false,
        "stream": false,
        "use_application_commands": false,
        "use_embedded_activities": false,
        "use_external_emojis": false,
        "use_external_stickers": false,
        "use_soundboard": false,
        "use_vad": false,
        "view_audit_log": false,
        "view_channel": false,
        "view_creator_monetization_analytics": false,
        "view_guild_insights": false,
      },
    },
    {
      "comment": "inherits",
      "id": "172018499005317120",
      "options": {
        "colour": 0,
        "hoisted": false,
        "mentionableByEveryone": false,
      },
      "permissions": {
        "add_reactions": false,
        "administrator": false,
        "attach_files": false,
        "ban_members": false,
        "change_nickname": false,
        "connect": false,
        "create_instant_invite": false,
        "create_private_threads": false,
        "create_public_threads": false,
        "deafen_members": false,
        "embed_links": false,
        "kick_members": false,
        "manage_channels": false,
        "manage_events": false,
        "manage_guild": false,
        "manage_guild_expressions": false,
        "manage_messages": false,
        "manage_nicknames": false,
        "manage_roles": false,
        "manage_threads": false,
        "manage_webhooks": false,
        "mention_everyone": false,
        "moderate_members": false,
        "move_members": false,
        "mute_members": false,
        "priority_speaker": false,
        "read_message_history": false,
        "request_to_speak": false,
        "send_messages": false,
        "send_messages_in_threads": false,
        "send_tts_messages": false,
        "speak": false,
        "stream": false,
        "use_application_commands": false,
        "use_embedded_activities": false,
        "use_external_emojis": false,
        "use_external_stickers": false,
        "use_soundboard": false,
        "use_vad": false,
        "view_audit_log": false,
        "view_channel": false,
        "view_creator_monetization_analytics": false,
        "view_guild_insights": false,
      },
    },
  ],
  "guildId": "172018499005317120",
}
`;

exports[`Integrations runs lib-minimal.lua 1`] = `
{
  "categories": [],
  "globalChannels": [],
  "globalRoles": [
    {
      "comment": "@everyone",
      "id": "172018499005317120",
      "options": {
        "colour": 0,
        "hoisted": false,
        "mentionableByEveryone": false,
      },
      "permissions": {
        "add_reactions": false,
        "administrator": false,
        "attach_files": false,
        "ban_members": false,
        "change_nickname": false,
        "connect": false,
        "create_instant_invite": false,
        "create_private_threads": false,
        "create_public_threads": false,
        "deafen_members": false,
        "embed_links": false,
        "kick_members": false,
        "manage_channels": false,
        "manage_events": false,
        "manage_guild": false,
        "manage_guild_expressions": false,
        "manage_messages": false,
        "manage_nicknames": false,
        "manage_roles": false,
        "manage_threads": false,
        "manage_webhooks": false,
        "mention_everyone": false,
        "moderate_members": false,
        "move_members": false,
        "mute_members": false,
        "priority_speaker": false,
        "read_message_history": false,
        "request_to_speak": false,
        "send_messages": false,
        "send_messages_in_threads": false,
        "send_tts_messages": false,
        "speak": false,
        "stream": false,
        "use_application_commands": false,
        "use_embedded_activities": false,
        "use_external_emojis": false,
        "use_external_stickers": false,
        "use_soundboard": false,
        "use_vad": false,
        "view_audit_log": false,
        "view_channel": false,
        "view_creator_monetization_analytics": false,
        "view_guild_insights": false,
      },
    },
  ],
  "guildId": "1094801227080015882",
}
`;

exports[`Integrations runs lib-roles.lua 1`] = `
{
  "categories": [],
  "globalChannels": [
    {
      "comment": "test-channel",
      "id": "1094801227080015882",
      "options": {
        "nsfw": false,
        "slowmode": 0,
        "topic": "a topic",
      },
      "overrides": [
        {
          "comment": "@everyone",
          "id": "42394823948909090",
          "permissions": {
            "add_reactions": undefined,
            "administrator": undefined,
            "attach_files": undefined,
            "ban_members": undefined,
            "change_nickname": undefined,
            "connect": undefined,
            "create_instant_invite": undefined,
            "create_private_threads": undefined,
            "create_public_threads": undefined,
            "deafen_members": undefined,
            "embed_links": undefined,
            "kick_members": undefined,
            "manage_channels": undefined,
            "manage_events": undefined,
            "manage_guild": undefined,
            "manage_guild_expressions": undefined,
            "manage_messages": undefined,
            "manage_nicknames": undefined,
            "manage_roles": undefined,
            "manage_threads": undefined,
            "manage_webhooks": undefined,
            "mention_everyone": undefined,
            "moderate_members": undefined,
            "move_members": true,
            "mute_members": undefined,
            "priority_speaker": undefined,
            "read_message_history": undefined,
            "request_to_speak": undefined,
            "send_messages": undefined,
            "send_messages_in_threads": undefined,
            "send_tts_messages": undefined,
            "speak": undefined,
            "stream": undefined,
            "use_application_commands": undefined,
            "use_embedded_activities": undefined,
            "use_external_emojis": undefined,
            "use_external_stickers": undefined,
            "use_soundboard": undefined,
            "use_vad": undefined,
            "view_audit_log": undefined,
            "view_channel": undefined,
            "view_creator_monetization_analytics": undefined,
            "view_guild_insights": undefined,
          },
          "type": "role",
        },
      ],
      "parentId": undefined,
      "predicate": [Function],
      "type": "text",
    },
  ],
  "globalRoles": [
    {
      "comment": "@everyone",
      "id": "172018499005317120",
      "options": {
        "colour": 0,
        "hoisted": false,
        "mentionableByEveryone": false,
      },
      "permissions": {
        "add_reactions": false,
        "administrator": false,
        "attach_files": false,
        "ban_members": false,
        "change_nickname": false,
        "connect": false,
        "create_instant_invite": false,
        "create_private_threads": false,
        "create_public_threads": false,
        "deafen_members": false,
        "embed_links": false,
        "kick_members": false,
        "manage_channels": false,
        "manage_events": false,
        "manage_guild": false,
        "manage_guild_expressions": false,
        "manage_messages": false,
        "manage_nicknames": false,
        "manage_roles": false,
        "manage_threads": false,
        "manage_webhooks": false,
        "mention_everyone": false,
        "moderate_members": false,
        "move_members": false,
        "mute_members": false,
        "priority_speaker": false,
        "read_message_history": false,
        "request_to_speak": false,
        "send_messages": false,
        "send_messages_in_threads": false,
        "send_tts_messages": false,
        "speak": false,
        "stream": false,
        "use_application_commands": false,
        "use_embedded_activities": false,
        "use_external_emojis": false,
        "use_external_stickers": false,
        "use_soundboard": false,
        "use_vad": false,
        "view_audit_log": false,
        "view_channel": false,
        "view_creator_monetization_analytics": false,
        "view_guild_insights": false,
      },
    },
  ],
  "guildId": "1094801227080015882",
}
`;

exports[`Integrations runs lib-visit.lua 1`] = `
{
  "categories": [],
  "globalChannels": [],
  "globalRoles": [
    {
      "comment": "@everyone",
      "id": "1094801227080015882",
      "options": {
        "colour": 0,
        "hoisted": false,
        "mentionableByEveryone": false,
      },
      "permissions": {
        "add_reactions": false,
        "administrator": false,
        "attach_files": false,
        "ban_members": false,
        "change_nickname": false,
        "connect": false,
        "create_instant_invite": false,
        "create_private_threads": false,
        "create_public_threads": false,
        "deafen_members": false,
        "embed_links": false,
        "kick_members": false,
        "manage_channels": true,
        "manage_events": false,
        "manage_guild": false,
        "manage_guild_expressions": false,
        "manage_messages": false,
        "manage_nicknames": false,
        "manage_roles": false,
        "manage_threads": false,
        "manage_webhooks": false,
        "mention_everyone": false,
        "moderate_members": false,
        "move_members": false,
        "mute_members": false,
        "priority_speaker": false,
        "read_message_history": false,
        "request_to_speak": false,
        "send_messages": false,
        "send_messages_in_threads": false,
        "send_tts_messages": false,
        "speak": false,
        "stream": false,
        "use_application_commands": false,
        "use_embedded_activities": false,
        "use_external_emojis": false,
        "use_external_stickers": false,
        "use_soundboard": false,
        "use_vad": false,
        "view_audit_log": false,
        "view_channel": false,
        "view_creator_monetization_analytics": false,
        "view_guild_insights": false,
      },
    },
  ],
  "guildId": "1094801227080015882",
}
`;

exports[`Integrations runs lint-fails.lua 1`] = `
{
  "categories": [],
  "globalChannels": [
    {
      "comment": "test-channel",
      "id": "1094801227080015882",
      "options": {
        "nsfw": false,
        "slowmode": 0,
        "topic": "",
      },
      "overrides": [],
      "parentId": undefined,
      "predicate": [Function],
      "type": "text",
    },
  ],
  "globalRoles": [
    {
      "comment": "a-role",
      "id": "1094801227080015882",
      "options": {
        "colour": 0,
        "hoisted": false,
        "mentionableByEveryone": false,
      },
      "permissions": {
        "add_reactions": false,
        "administrator": true,
        "attach_files": false,
        "ban_members": false,
        "change_nickname": false,
        "connect": false,
        "create_instant_invite": false,
        "create_private_threads": false,
        "create_public_threads": false,
        "deafen_members": false,
        "embed_links": false,
        "kick_members": false,
        "manage_channels": false,
        "manage_events": false,
        "manage_guild": false,
        "manage_guild_expressions": false,
        "manage_messages": false,
        "manage_nicknames": false,
        "manage_roles": false,
        "manage_threads": false,
        "manage_webhooks": false,
        "mention_everyone": false,
        "moderate_members": false,
        "move_members": false,
        "mute_members": false,
        "priority_speaker": false,
        "read_message_history": false,
        "request_to_speak": false,
        "send_messages": false,
        "send_messages_in_threads": false,
        "send_tts_messages": false,
        "speak": false,
        "stream": false,
        "use_application_commands": false,
        "use_embedded_activities": false,
        "use_external_emojis": false,
        "use_external_stickers": false,
        "use_soundboard": false,
        "use_vad": false,
        "view_audit_log": false,
        "view_channel": false,
        "view_creator_monetization_analytics": false,
        "view_guild_insights": false,
      },
    },
    {
      "comment": "@everyone",
      "id": "1094801227080015882",
      "options": {
        "colour": 0,
        "hoisted": false,
        "mentionableByEveryone": false,
      },
      "permissions": {
        "add_reactions": false,
        "administrator": false,
        "attach_files": false,
        "ban_members": false,
        "change_nickname": false,
        "connect": false,
        "create_instant_invite": false,
        "create_private_threads": false,
        "create_public_threads": false,
        "deafen_members": false,
        "embed_links": false,
        "kick_members": false,
        "manage_channels": true,
        "manage_events": false,
        "manage_guild": false,
        "manage_guild_expressions": false,
        "manage_messages": false,
        "manage_nicknames": false,
        "manage_roles": false,
        "manage_threads": false,
        "manage_webhooks": false,
        "mention_everyone": false,
        "moderate_members": true,
        "move_members": false,
        "mute_members": false,
        "priority_speaker": false,
        "read_message_history": false,
        "request_to_speak": false,
        "send_messages": false,
        "send_messages_in_threads": false,
        "send_tts_messages": false,
        "speak": false,
        "stream": false,
        "use_application_commands": false,
        "use_embedded_activities": false,
        "use_external_emojis": false,
        "use_external_stickers": false,
        "use_soundboard": false,
        "use_vad": false,
        "view_audit_log": false,
        "view_channel": false,
        "view_creator_monetization_analytics": false,
        "view_guild_insights": false,
      },
    },
  ],
  "guildId": "1094801227080015882",
}
`;

exports[`Integrations runs minimal.lua 1`] = `
{
  "categories": [],
  "globalChannels": [],
  "globalRoles": [
    {
      "comment": "@everyone",
      "id": "172018499005317120",
      "options": {
        "colour": 0,
        "hoisted": false,
        "mentionableByEveryone": false,
      },
      "permissions": {
        "add_reactions": false,
        "administrator": false,
        "attach_files": false,
        "ban_members": false,
        "change_nickname": false,
        "connect": false,
        "create_instant_invite": false,
        "create_private_threads": false,
        "create_public_threads": false,
        "deafen_members": false,
        "embed_links": false,
        "kick_members": false,
        "manage_channels": false,
        "manage_events": false,
        "manage_guild": false,
        "manage_guild_expressions": false,
        "manage_messages": false,
        "manage_nicknames": false,
        "manage_roles": false,
        "manage_threads": false,
        "manage_webhooks": false,
        "mention_everyone": false,
        "moderate_members": false,
        "move_members": false,
        "mute_members": false,
        "priority_speaker": false,
        "read_message_history": false,
        "request_to_speak": false,
        "send_messages": false,
        "send_messages_in_threads": false,
        "send_tts_messages": false,
        "speak": false,
        "stream": false,
        "use_application_commands": false,
        "use_embedded_activities": false,
        "use_external_emojis": false,
        "use_external_stickers": false,
        "use_soundboard": false,
        "use_vad": false,
        "view_audit_log": false,
        "view_channel": false,
        "view_creator_monetization_analytics": false,
        "view_guild_insights": false,
      },
    },
  ],
  "guildId": "1094801227080015882",
}
`;

exports[`Integrations runs roles.lua 1`] = `
{
  "categories": [],
  "globalChannels": [],
  "globalRoles": [
    {
      "comment": "@everyone",
      "id": "1094801227080015882",
      "options": {
        "colour": 0,
        "hoisted": false,
        "mentionableByEveryone": false,
      },
      "permissions": {
        "add_reactions": false,
        "administrator": false,
        "attach_files": false,
        "ban_members": false,
        "change_nickname": false,
        "connect": false,
        "create_instant_invite": false,
        "create_private_threads": false,
        "create_public_threads": false,
        "deafen_members": false,
        "embed_links": false,
        "kick_members": false,
        "manage_channels": false,
        "manage_events": false,
        "manage_guild": false,
        "manage_guild_expressions": false,
        "manage_messages": false,
        "manage_nicknames": false,
        "manage_roles": false,
        "manage_threads": false,
        "manage_webhooks": false,
        "mention_everyone": false,
        "moderate_members": false,
        "move_members": false,
        "mute_members": false,
        "priority_speaker": false,
        "read_message_history": false,
        "request_to_speak": false,
        "send_messages": false,
        "send_messages_in_threads": false,
        "send_tts_messages": false,
        "speak": false,
        "stream": false,
        "use_application_commands": false,
        "use_embedded_activities": false,
        "use_external_emojis": false,
        "use_external_stickers": false,
        "use_soundboard": false,
        "use_vad": false,
        "view_audit_log": false,
        "view_channel": false,
        "view_creator_monetization_analytics": false,
        "view_guild_insights": false,
      },
    },
    {
      "comment": "another-test-role",
      "id": "1094801227080015882",
      "options": {
        "colour": 0,
        "hoisted": false,
        "mentionableByEveryone": false,
      },
      "permissions": {
        "add_reactions": false,
        "administrator": false,
        "attach_files": false,
        "ban_members": false,
        "change_nickname": false,
        "connect": false,
        "create_instant_invite": false,
        "create_private_threads": false,
        "create_public_threads": false,
        "deafen_members": false,
        "embed_links": false,
        "kick_members": false,
        "manage_channels": true,
        "manage_events": false,
        "manage_guild": false,
        "manage_guild_expressions": false,
        "manage_messages": false,
        "manage_nicknames": false,
        "manage_roles": false,
        "manage_threads": false,
        "manage_webhooks": false,
        "mention_everyone": false,
        "moderate_members": false,
        "move_members": false,
        "mute_members": false,
        "priority_speaker": false,
        "read_message_history": false,
        "request_to_speak": false,
        "send_messages": false,
        "send_messages_in_threads": false,
        "send_tts_messages": false,
        "speak": false,
        "stream": false,
        "use_application_commands": false,
        "use_embedded_activities": false,
        "use_external_emojis": false,
        "use_external_stickers": false,
        "use_soundboard": false,
        "use_vad": false,
        "view_audit_log": false,
        "view_channel": false,
        "view_creator_monetization_analytics": false,
        "view_guild_insights": false,
      },
    },
    {
      "comment": "another-another-test-role",
      "id": "1094801227080015882",
      "options": {
        "colour": 0,
        "hoisted": false,
        "mentionableByEveryone": false,
      },
      "permissions": {
        "add_reactions": false,
        "administrator": false,
        "attach_files": false,
        "ban_members": false,
        "change_nickname": false,
        "connect": false,
        "create_instant_invite": false,
        "create_private_threads": false,
        "create_public_threads": false,
        "deafen_members": false,
        "embed_links": false,
        "kick_members": false,
        "manage_channels": true,
        "manage_events": false,
        "manage_guild": false,
        "manage_guild_expressions": false,
        "manage_messages": true,
        "manage_nicknames": false,
        "manage_roles": false,
        "manage_threads": false,
        "manage_webhooks": false,
        "mention_everyone": false,
        "moderate_members": false,
        "move_members": false,
        "mute_members": false,
        "priority_speaker": false,
        "read_message_history": false,
        "request_to_speak": false,
        "send_messages": false,
        "send_messages_in_threads": false,
        "send_tts_messages": false,
        "speak": false,
        "stream": false,
        "use_application_commands": false,
        "use_embedded_activities": false,
        "use_external_emojis": false,
        "use_external_stickers": false,
        "use_soundboard": false,
        "use_vad": false,
        "view_audit_log": false,
        "view_channel": false,
        "view_creator_monetization_analytics": false,
        "view_guild_insights": false,
      },
    },
  ],
  "guildId": "1094801227080015882",
}
`;
